<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GO Launcher EX</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancel</string>
    <string name="tabs_allApps">All</string>
    <string name="tabs_recentApps">Recent</string>
    <string name="tabs_processManagement">Running</string>
    <string name="btns_memory">Memory:</string>
    <string name="btns_runninginfo">Info</string>
    <string name="btns_runninglock">Lock app</string>
    <string name="btns_runningunlock">Unlock app</string>
    <string name="menuitem_sorticon">Sorting</string>
    <string name="menuitem_createfolder">New folder</string>
    <string name="menuitem_appfuncSetting">Settings</string>
    <string name="menuitem_arrangedrawer">Auto-folder</string>
    <string name="menuitem_hide_tilt">Hide app</string>
    <string name="locklist">Select the apps need to be locked</string>
    <string name="closeicontext">Close</string>
    <string name="lock2text">Lock</string>
    <string name="gototext">Goto</string>
    <string name="unlock2text">Unlock</string>
    <string name="infotext">Info</string>
    <string name="dlg_promanageTitle">Attention</string>
    <string name="dlg_promanageContent">All running programs will be closed !</string>
    <string name="dlg_recentContent">All history will be cleared !</string>
    <string name="dlg_activityNotFound">The application cannot be found. Remove it from App Drawer?</string>
    <string name="dlg_deleteFolder">Attention</string>
    <string name="dlg_deleteFolderContent">Delete the folder and release apps into app drawer?</string>
    <string name="sort_processing">Sorting, please wait</string>
    <string name="initialization">Initialization in progress</string>
    <string name="dlg_sortChangeTitle">Sorting mode of icon</string>
    <string name="dlg_wallPaperTitle">Wallpaper</string>
    <string name="menuitem_wallpaper">Wallpaper</string>
    <string name="menuitem_addprogram">Add</string>
    <string name="menuitem_search">Search</string>
    <string name="menuitem_setting">Settings</string>
    <string name="menuitem_moresetting">Preferences</string>
    <string name="menuitem_screensetting">Edit</string>
    <string name="menuitem_themesetting">Themes</string>
    <string name="menuitem_gowidget">GO Widget</string>
    <string name="menuitem_notification">Notification</string>
    <string name="menuitem_language">Language</string>
    <string name="menuitem_win_award">Win Award</string>
    <string name="menuitem_update">Update</string>
    <string name="menuitem_rate">Rate</string>
    <string name="menuitem_feedback">Feedback</string>
    <string name="menuitem_expend">Status bar</string>
    <string name="menuitem_gostore">GO Store</string>
    <string name="menuitem_lockdesktop_lock">Lock Screen</string>
    <string name="menuitem_lockdesktop_restart">Restart</string>
    <string name="menuitem_lockdesktop_unlock">Unlock Screen</string>
    <string name="menuitem_plugin_management">All plug-ins</string>
    <string name="lockdesktop_dialog_context">Edit permission of home screen and app drawer has been locked.</string>
    <string name="lockdesktop_guide_pay_dialog_context">Edit permission of home screen and app drawer has been locked. Do you need to lock more private apps, like phone and message?</string>
    <string name="lockdesktop_guide_pay_dialog_try_button_context">Try</string>
    <string name="lockdesktop_guide_pay_dialog_not_need_button_context">No need</string>
    <string name="delete">Delete</string>
    <string name="menuitem_change_icon_dock">Replace</string>
    <string name="menuitem_change_gesture_dock">Gesture</string>
    <string name="current">current</string>
    <string name="add_app_icon">Shortcut</string>
    <string name="add_widget">Widget</string>
    <string name="add_widget_failed">Not enough room, choose another screen or add a new one.</string>
    <string name="home_gesture_hint">Home key action</string>
    <string name="up_gesture_hint">Glide up action</string>
    <string name="down_gesture_hint">Glide down action</string>
    <string name="oper_gesture">Key and gestures</string>
    <string name="theme_display">Theme display</string>
    <string name="statusbar">Show status bar</string>
    <string name="screen_looping">Infinite scrolling</string>
    <string name="screen_showmargin">Show screen margins</string>
    <string name="screen_showmargin_summary">Only available in 3D Core.</string>
    <string name="use_shellengine">3D Core</string>
    <string name="use_shellengine_summary">Enhance flipping speed and transition animations</string>
    <string name="default_launcher">Set as default Launcher</string>
    <string name="screen_looping_summary">Continuously scroll through all screen</string>
    <string name="wallpaper_scrolling">Wallpaper mode</string>
    <string name="show_app_name">App icon labels</string>
    <string name="appfunc_show_app_name_hint">Show/Hide icon labels in App Drawer</string>
    <string name="appfunc_show_search_hint">Show/Hide search in App Drawer</string>
    <string name="appfunc_show_app_update">Notify update info on app icon</string>
    <string name="show_neglect_app_hint">Show/Hide locked apps</string>
    <string name="screen_rows_cols">Grid size</string>
    <string name="screen_grid_diy">Custom grids</string>
    <string name="screen_rows_cols_hint">Define number of apps on each screen</string>
    <string name="screen_row_dialog_msg">Set this number as the row number</string>
    <string name="screen_column_dialog_msg">Set this number as the column number</string>
    <string name="screen_indicator">Indicator display</string>
    <string name="screen_indicator_hint">Show an indicator for which home screen you are currently on</string>
    <string name="screen_indicator_autohide">Auto-hide screen indicator</string>
    <string name="screen_indicator_autohide_hint">Only show when sliding between screens</string>
    <string name="desktop_transition">Screen transition</string>
    <string name="desktop_transition_hint">Select screen transition effect</string>
    <string name="screen_indicator_showmode">Indicator style</string>
    <string name="screen_indicator_position">Indicator position</string>
    <string name="app_drawer_indicator_position">Indicator position</string>
    <string name="draw_indicator_showmode">App drawer indicator Style</string>
	<string name="advanced_setting">Advanced settings</string>
    <string name="aboutGo">About GO Launcher EX</string>
    <string name="defaultstyle">Default theme</string>
    <string name="Dockrow">Dock row</string>
    <string name="Dockrowsummary">Number of rows for dock</string>
    <string name="Dockautofitsummary">Rearrange and resize icons to fit dock bar</string>
    <string name="dockBg">Dock background</string>
    <string name="autocycle">Loop mode</string>
    <string name="Dockshow">Show dock</string>
    <string name="autofit">Auto-fit icons</string>
    <string name="gmailtip_2.0">Only Support Gmail 2.3.6 version or up.</string>
    <string name="gmailtip_4.0">Only Support Gmail 4.0.5 version or up.</string>
    <string name="moreapp_hint">Sorry, you have not installed any applications we support after installed they will be added automatically.</string>
    <string name="select_app_icon">Select shortcut</string>
    <string name="select_widget_app">Select widget</string>
    <string name="blank">Blank</string>
    <string name="appfunc">App drawer icon</string>
    <string name="selecticongesture">Select gesture response</string>
    <string name="func_app_setting">App drawer settings</string>
    <string name="func_app_screen_transition">Screen transition</string>
    <string name="func_app_running">Running tab</string>
    <string name="func_app_select_bg">Select drawer background</string>
    <string name="func_app_select_bg_hint">Select customized app drawer background</string>
    <string name="func_app_grid_setting">Grid size</string>
    <string name="func_app_inout_setting">Enter transition</string>
    <string name="func_app_inout_setting_hint">Enter transition</string>
    <string name="func_app_icon_effect_setting">Horizontal transition</string>
    <string name="func_app_grid_setting_hint">App drawer row/column selection</string>
    <string name="func_app_show_tab_row">Show top action bar</string>
    <string name="func_app_show_app_name">Show app drawer icon labels</string>
    <string name="func_app_update_info">Show app update info</string>
    <string name="func_app_flip_horizontal">App drawer scrolling orientation</string>
    <string name="func_app_screen_looping">Screens scroll circularly</string>
    <string name="func_app_screen_looping_summary">Scroll past the last screen will get to the first one</string>
    <string name="transparent_statusbar">Support transparent status bar</string>
    <string name="show_statusbar_bg">Show status bar background</string>
    <string name="permanentmemory_enable">System persistent</string>
    <string name="permanentmemory_enablesummary">Keep launcher persistent could hold it running. To take off the notification of GO, please turn it off.</string>
    <string name="prevent_force_close">Prevent force close</string>
    <string name="prevent_force_close_summary">Prevent force-closes when running out of memory</string>
    <string name="check_version">Check version</string>
    <string name="share_app">Share application</string>
    <string name="share_app_summary">Share GO Launcher EX with friends</string>
    <string name="rate_go_launcher">Rate GO Launcher EX</string>
    <string name="rate_go_launcher_summary">Rate GO Launcher EX in Android Market</string>
    <string name="feedback">Send feedback</string>
    <string name="feedback_summary">Send feedback to GO Launcher EX Team</string>
    <string name="copyright_info">Copyright info</string>
    <string name="copyright_info_summary">Copyright © 2004-2014  All Rights Reserved. \n3G.cn</string>
    <string name="reset_to_default_title">Reset to default</string>
    <string name="defaultbtn">Default</string>
    <string name="restore_db_title">Restore settings</string>
    <string name="clean_dirty_data">Clean rubbish data</string>
    <string name="clean_dirty_data_summary">Check and clean overlapping shortcuts or widgets on home screen</string>
    <string name="migrate_app_tip_title">Copy Home Screen</string>
    <string name="migrate_message">Copy other Launcher icon to GO Launcher</string>
    <string name="summary_nonbackup">No backup</string>
    <string name="title_backup_setting">Backup &amp; restore</string>
    <string name="backup_desk">Back up GO Launcher</string>
    <string name="reset_to_default_summary">Restore to the latest backup</string>
    <string name="summary_reset">Reset GO Launcher to default settings</string>
    <string name="title_local_backup">Local backup</string>
    <string name="title_more_backup">More backups</string>
    <string name="go_backup">GO Backup</string>
    <string name="summary_go_backup">Supports multi-backup and online backup</string>
    <string name="appfunc_tab_bottom_bg_settings">Tab style</string>
    <string name="setting_help_pref">Q&amp;A</string>
    <string name="pref_help_hint"> Learn how to use GO Launcher</string>
    <string name="desksetting_about_wallpaper_title">Wallpaper</string>
    <string name="desksetting_about_wallpaper_summary">Wallpaper NILGIRI SOUTH (6,839 m) is licensed by Anton Jankovoy.</string>
    <string name="pref_title_appdraw">App Drawer</string>
    <string name="pref_title_background">Background</string>
    <string name="pref_title_gesture_and_transition">Gesture&amp;Transition</string>
    <string name="activation_code">Enter activation code</string>
    <string name="activation_code_checking">Checking...</string>
</resources>