<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myAndroid="http://schemas.android.com/apk/res/com.gau.go.launcherex"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/desk_setting_bg_color"
    android:orientation="vertical" >

    <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingPageTitleView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        myAndroid:image="@drawable/desk_setting_page_title_back_new"
        myAndroid:titleBg="@drawable/desk_setting_page_title_bg_new"
        myAndroid:titleHeight="@dimen/desk_setting_pagetitle_height_new"
        myAndroid:titleShowLogo="true"
        myAndroid:titleText="@string/title_backup_setting"
        myAndroid:titleTextColor="@color/desk_setting_page_title_color_new"
        myAndroid:titleTextLineHeight="0dp"
        myAndroid:titleTextSize="@dimen/desk_setting_page_title_text_size" />

    <com.jiubang.ggheart.apps.desks.Preferences.view.TranslucentScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/desk_setting_view_padding"
            android:paddingRight="@dimen/desk_setting_view_padding"
            android:paddingBottom="@dimen/desk_setting_view_margin_bottom" >

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingTitleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:titleText="@string/title_local_backup" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/desk_setting_group_bg"
                android:orientation="vertical" >

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/backup_desk_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/summary_nonbackup"
                    myAndroid:titleText="@string/backup_desk" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/restore_db_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/reset_to_default_summary"
                    myAndroid:titleText="@string/restore_db_title" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/reset_to_default_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:isHiddenBottomLine="true"
                    myAndroid:summaryText="@string/summary_reset"
                    myAndroid:titleText="@string/reset_to_default_title" />
            </LinearLayout>

            <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingTitleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                myAndroid:titleText="@string/title_more_backup" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/desk_setting_group_bg"
                android:orientation="vertical" >

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/more_go_backup_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:isHiddenBottomLine="true"
                    myAndroid:summaryText="@string/summary_go_backup"
                    myAndroid:titleText="@string/go_backup" />
            </LinearLayout>
        </LinearLayout>
    </com.jiubang.ggheart.apps.desks.Preferences.view.TranslucentScrollView>

</LinearLayout>