<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myAndroid="http://schemas.android.com/apk/res/com.gau.go.launcherex"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/desk_setting_bg_color"
    android:orientation="vertical" >

    <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingPageTitleView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        myAndroid:image="@drawable/desk_setting_page_title_back_new"
        myAndroid:titleBg="@drawable/desk_setting_page_title_bg_new"
        myAndroid:titleHeight="@dimen/desk_setting_pagetitle_height_new"
        myAndroid:titleShowLogo="true"
        myAndroid:titleText="@string/advanced_setting"
        myAndroid:titleTextColor="@color/desk_setting_page_title_color_new"
        myAndroid:titleTextLineHeight="0dp"
        myAndroid:titleTextSize="@dimen/desk_setting_page_title_text_size" />

    <com.jiubang.ggheart.apps.desks.Preferences.view.TranslucentScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:paddingLeft="@dimen/desk_setting_view_padding"
        android:paddingRight="@dimen/desk_setting_view_padding" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/desk_setting_view_padding_top"
            android:orientation="vertical"
            android:paddingBottom="@dimen/desk_setting_view_margin_bottom" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/desk_setting_group_bg"
                android:orientation="vertical" >

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/transparent_statusbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:titleText="@string/transparent_statusbar" />
                
                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/show_statusbar_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:titleText="@string/show_statusbar_bg" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/permanentmemory_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/permanentmemory_enablesummary"
                    myAndroid:titleText="@string/permanentmemory_enable" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/prevent_force_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/prevent_force_close_summary"
                    myAndroid:titleText="@string/prevent_force_close" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/clean_dirty_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/clean_dirty_data_summary"
                    myAndroid:titleText="@string/clean_dirty_data" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/migrate_app_tip_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/migrate_message"
                    myAndroid:titleText="@string/migrate_app_tip_title" />
                
                 <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/setting_backup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:isHiddenBottomLine="true"
                    myAndroid:titleText="@string/title_backup_setting"
                    myAndroid:titleTextSize="@dimen/desk_setting_main_text_size" />
            </LinearLayout>
        </LinearLayout>
    </com.jiubang.ggheart.apps.desks.Preferences.view.TranslucentScrollView>

</LinearLayout>