<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myAndroid="http://schemas.android.com/apk/res/com.gau.go.launcherex"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/desk_setting_bg_color"
    android:orientation="vertical" >

    <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingPageTitleView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        myAndroid:image="@drawable/desk_setting_page_title_back_new"
        myAndroid:titleBg="@drawable/desk_setting_page_title_bg_new"
        myAndroid:titleHeight="@dimen/desk_setting_pagetitle_height_new"
        myAndroid:titleShowLogo="true"
        myAndroid:titleText="@string/pref_title_appdraw"
        myAndroid:titleTextColor="@color/desk_setting_page_title_color_new"
        myAndroid:titleTextLineHeight="0dp"
        myAndroid:titleTextSize="@dimen/desk_setting_page_title_text_size" />

    <com.jiubang.ggheart.apps.desks.Preferences.view.TranslucentScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="none"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingTop="8dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/desk_setting_view_padding"
                android:layout_marginRight="@dimen/desk_setting_view_padding"
                android:background="@drawable/desk_setting_group_bg"
                android:orientation="vertical" >

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemListView
                    android:id="@+id/func_app_rows_cols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:dialogTitle="@string/func_app_grid_setting"
                    myAndroid:dialogType="SINGLE_CHOICE"
                    myAndroid:listEntries="@array/fun_app_rows_cols"
                    myAndroid:listEntryValues="@array/fun_app_rows_cols_value"
                    myAndroid:summaryText="@string/func_app_grid_setting_hint"
                    myAndroid:titleText="@string/func_app_grid_setting" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemListView
                    android:id="@+id/func_app_scroll_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:dialogTitle="@string/func_app_flip_horizontal"
                    myAndroid:dialogType="SINGLE_CHOICE"
                    myAndroid:listEntries="@array/scroll_list_title"
                    myAndroid:listEntryValues="@array/scroll_list_value"
                    myAndroid:summaryText="@string/defaultbtn"
                    myAndroid:titleText="@string/func_app_flip_horizontal" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/func_app_looping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:summaryText="@string/func_app_screen_looping_summary"
                    myAndroid:titleText="@string/func_app_screen_looping" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/func_app_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:titleText="@string/pref_title_background" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemBaseView
                    android:id="@+id/func_app_gesture_and_transition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:titleText="@string/pref_title_gesture_and_transition" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/fun_app_show_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:titleText="@string/func_app_show_app_name" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/show_fun_app_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:titleText="@string/func_app_show_tab_row" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemListView
                    android:id="@+id/fun_app_appdrawer_selectcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:dialogTitle="@string/appfunc_tab_bottom_bg_settings"
                    myAndroid:dialogType="SINGLE_CHOICE"
                    myAndroid:titleText="@string/appfunc_tab_bottom_bg_settings" />

                <com.jiubang.ggheart.apps.desks.Preferences.view.DeskSettingItemCheckBoxView
                    android:id="@+id/func_app_update_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    myAndroid:isHiddenBottomLine="true"
                    myAndroid:summaryText="@string/appfunc_show_app_update"
                    myAndroid:titleText="@string/func_app_update_info" />
            </LinearLayout>
        </LinearLayout>
    </com.jiubang.ggheart.apps.desks.Preferences.view.TranslucentScrollView>

</LinearLayout>